--- a/index.html
+++ b/index.html
@@ -143,6 +143,28 @@
         </div>
       </section>
     </div>
+    <div class="padding_global">
+      <section>
+        <div class="text_baner">
+          გამოიწერეთ თიბისი კონცეპტის ნაკრები და ისარგებლეთ როგორც საბანკო, ისე
+          არასაბანკო უპირატესობებით.
+        </div>
+      </section>
+    </div>
+    <div class="global_padding">
+      <section>
+        <div class="heading_wraper">შეარჩიეთ ნაკრები</div>
+      </section>
+      <section class="grid_1_sec">
+        <div class="grid_1">
+          <div class="left_grid">
+            <div class="digital"></div>
+            <div class="premium"></div>
+          </div>
+          <div class="right_grid"></div>
+        </div>
+      </section>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
