add responsive scrole on grid_1 section on max-width 760px

--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
         </div>
       </section>
     </div>
-    <div class="global_padding">
+    <div class="padding_global">
       <section>
         <div class="heading_wraper">შეარჩიეთ ნაკრები</div>
       </section>
     </div>
-    <div class="global_padding">
+    <div class="padding_global">
       <section class="grid_1_sec">
         <div class="grid_1">
           <div class="left_grid">
