add numbers section with responsive

--- a/index.html
+++ b/index.html
@@ -230,7 +230,30 @@
         </div>
       </section>
     </div>
-
+    <div class="padding_global">
+      <section>
+        <div class="numbers_container">
+          <div class="number_1">
+            <div class="number_card">
+              <h1>94 750</h1>
+              <p>მომხმარებელი</p>
+            </div>
+          </div>
+          <div class="number_1">
+            <div class="number_card">
+              <h1>150+</h1>
+              <p>ღონისძიება</p>
+            </div>
+          </div>
+          <div class="number_1">
+            <div class="number_card">
+              <h1>130+</h1>
+              <p>შეთავაზება</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
