add bottom baner

--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
         </div>
       </section>
     </div>
+
     <div class="padding_global">
       <section>
         <div class="numbers_container">
@@ -250,6 +251,23 @@
               <h1>130+</h1>
               <p>შეთავაზება</p>
             </div>
+          </div>
+        </div>
+      </section>
+    </div>
+    <!-- aqedan -->
+    <!-- aqedan -->
+    <!-- aqedan -->
+    <!-- aqedan -->
+    <div class="padding_global">
+      <section>
+        <div class="bottom_baner">
+          <div class="banner_inner_content">
+            <h1>პირადი ბანკირი</h1>
+            <p>თქვენი სანდო პარტნიორი ფინანსურ რჩევებსა და ოპერაციებში</p>
+            <button>
+              <span>გაიგეთ მეტი</span>
+            </button>
           </div>
         </div>
       </section>
