add responsive on offers swiper section

--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
         </div>
       </section>
     </div>
-    <footer>
+    <!-- <footer>
       <div class="footer_head">
         <div class="footer_top_inner">
           <div class="footer_inner_logo">
@@ -671,7 +671,7 @@
       </div>
       <div class="footer_contant"></div>
       <div class="footer_bottom"></div>
-    </footer>
+    </footer> -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
     <script src="swiper.js"></script>
