add prizes section

--- a/index.html
+++ b/index.html
@@ -616,6 +616,81 @@
         </div>
       </section>
     </div>
+    <div class="padding_global">
+      <section>
+        <div class="prizes_baner_title">ჯილდოები</div>
+      </section>
+    </div>
+    <div class="padding_global">
+      <section>
+        <div class="swiper-container swiper_container_prizes">
+          <div class="swiper-wrapper">
+            <div id="prizes_slider" class="swiper-slide">
+              <div class="swiper_content_inner">
+                <img
+                  class="prizes_img"
+                  src="./images/prizes1.png"
+                  alt="swiper img"
+                />
+                <div>
+                  <strong>
+                    საუკეთესო პერსონალური საბანკო მომსახურება საქართველოში 2024
+                  </strong>
+                </div>
+                <p>The Global Finance</p>
+              </div>
+            </div>
+            <div id="prizes_slider" class="swiper-slide">
+              <div class="swiper_content_inner">
+                <img
+                  class="prizes_img"
+                  src="./images/prizes2.png"
+                  alt="swiper img"
+                />
+                <div>
+                  <strong>
+                    საუკეთესო პერსონალური საბანკო მომსახურება საქართველოში 2023
+                  </strong>
+                </div>
+                <p>Euromoney</p>
+              </div>
+            </div>
+            <div id="prizes_slider" class="swiper-slide">
+              <div class="swiper_content_inner">
+                <img
+                  class="prizes_img"
+                  src="./images/prizes2.png"
+                  alt="swiper img"
+                />
+                <div>
+                  <strong>
+                    საუკეთესო პერსონალური საბანკო მომსახურება საქართველოში 2022
+                  </strong>
+                </div>
+                <p>The Global Finance</p>
+              </div>
+            </div>
+            <div id="prizes_slider" class="swiper-slide">
+              <div class="swiper_content_inner">
+                <img
+                  class="prizes_img"
+                  src="./images/prizes4.png"
+                  alt="swiper img"
+                />
+                <div>
+                  <strong>
+                    საუკეთესო პერსონალური საბანკო მომსახურება საქართველოში 2021
+                  </strong>
+                </div>
+                <p>The Banker & PWM</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-scrollbar"></div>
+        </div>
+      </section>
+    </div>
     <!-- <footer>
       <div class="footer_head">
         <div class="footer_top_inner">
