fixed : swiper inner contect positions

--- a/index.html
+++ b/index.html
@@ -602,7 +602,9 @@
         </div>
       </section>
     </div>
-
+    <div class="padding_global">
+      <section>.</section>
+    </div>
     <div class="padding_global">
       <section>
         <div class="bottom_baner">
@@ -626,7 +628,7 @@
         <div class="swiper-container swiper_container_prizes">
           <div class="swiper-wrapper">
             <div id="prizes_slider" class="swiper-slide">
-              <div class="swiper_content_inner">
+              <div class="swiper_content_inner_prizes">
                 <img
                   class="prizes_img"
                   src="./images/prizes1.png"
@@ -641,7 +643,7 @@
               </div>
             </div>
             <div id="prizes_slider" class="swiper-slide">
-              <div class="swiper_content_inner">
+              <div class="swiper_content_inner_prizes">
                 <img
                   class="prizes_img"
                   src="./images/prizes2.png"
@@ -656,7 +658,7 @@
               </div>
             </div>
             <div id="prizes_slider" class="swiper-slide">
-              <div class="swiper_content_inner">
+              <div class="swiper_content_inner_prizes">
                 <img
                   class="prizes_img"
                   src="./images/prizes2.png"
@@ -671,7 +673,7 @@
               </div>
             </div>
             <div id="prizes_slider" class="swiper-slide">
-              <div class="swiper_content_inner">
+              <div class="swiper_content_inner_prizes">
                 <img
                   class="prizes_img"
                   src="./images/prizes4.png"
