add prizes section with it slider and slides

--- a/index.html
+++ b/index.html
@@ -603,7 +603,9 @@
       </section>
     </div>
     <div class="padding_global">
-      <section>.</section>
+      <section>
+        <div class="products_section_baner">პროდუქტები</div>
+      </section>
     </div>
     <div class="padding_global">
       <section>
@@ -621,6 +623,65 @@
     <div class="padding_global">
       <section>
         <div class="prizes_baner_title">ჯილდოები</div>
+      </section>
+    </div>
+    <div class="padding_global">
+      <section>
+        <div class="swiper-container products_container_swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="swiper_img">
+                <img src="./images/digital.png" alt="swiper_img" />
+              </div>
+              <div class="swiper_content">
+                <div class="swiper_content_inner">
+                  <h2 class="products_h2"><strong>ციფრული</strong></h2>
+                  <p>
+                    თიბისი კონცეპტის ციფრული ნაკრები განკუთვნილია მათთვის,
+                    ვისთვისაც
+                    <strong
+                      >საბანკო მომსახურებით სარგებლობა ყოველდღიურობის
+                      ნაწილია</strong
+                    >, ვინც ...
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="swiper_img">
+                <img src="./images/premium.png" alt="swiper_img" />
+              </div>
+              <div class="swiper_content">
+                <div class="swiper_content_inner">
+                  <h2 class="products_h2"><strong>პრემიუმი</strong></h2>
+                  <p>
+                    თიბისი კონცეპტის მომხმარებლებთან ურთიერთობის ერთ-ერთი
+                    ფორმატი - <strong>პრემიუმ ნაკრები</strong>, სხვა საბანკო და
+                    არასაბანკო უპირატესობებთან ერთად ...
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="swiper_img">
+                <img src="./images/360.png" alt="swiper_img" />
+              </div>
+              <div class="swiper_content">
+                <div class="swiper_content_inner">
+                  <h2 class="products_h2"><strong>360</strong></h2>
+                  <p>
+                    <strong>თიბისი კონცეპტის 360</strong> ნაკრები განკუთვნილია
+                    მათთვის, ვისაც სხვა საბანკო და არასაბანკო უპიტარესობებთან
+                    ერთად, კიდევ უფრ ...
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Add Scrollbar -->
+          <div class="swiper-scrollbar"></div>
+        </div>
       </section>
     </div>
     <div class="padding_global">
