--- a/index.html
+++ b/index.html
@@ -806,28 +806,28 @@
       <div class="footer-content">
         <div class="footer-content-column">
           <a class="a-tag">პროდუქტები</a>
-          <div class="inner-a-tags no-height">
+          <div class="inner-a-tags prod_click">
             <a>ნაკრები</a>
             <a>პერსონალური ბანკი</a>
           </div>
         </div>
         <div class="footer-content-column">
           <a class="a-tag">Lifestyle</a>
-          <div class="inner-a-tags no-height">
+          <div class="inner-a-tags offer_click">
             <a>შეთავაზებები</a>
             <a>ღონისძიებები</a>
           </div>
         </div>
         <div class="footer-content-column">
           <a class="a-tag">კონცეპტის სივრცე</a>
-          <div class="inner-a-tags no-height">
+          <div class="inner-a-tags library_click">
             <a>ბიბლიოთეკა</a>
             <a>კაფე</a>
           </div>
         </div>
         <div class="footer-content-column">
           <a class="a-tag">დაგვიკავშირდით:</a>
-          <div class="inner-a-tags no-height">
+          <div class="inner-a-tags colection_click">
             <a>ნაკრები</a>
             <a>პერსონალური ბანკი</a>
           </div>
@@ -864,8 +864,8 @@
             gap: 10px;
           "
         >
-          <a href="">კონფიდენციალურობა</a>
-          <a href="">წესები და პირობები</a>
+          <div href="">კონფიდენციალურობა</div>
+          <div href="">წესები და პირობები</div>
         </div>
       </div>
     </footer>
