last css changes

--- a/index.html
+++ b/index.html
@@ -252,13 +252,15 @@
         <div class="footer-content-column">
           <a class="a-tag">პროდუქტები</a>
           <div class="inner-a-tags prod_click">
+            <a>პროდუქტების მიმოხილვა</a>
             <a>ნაკრები</a>
-            <a>პერსონალური ბანკი</a>
+            <a>პირადი ბანკირი</a>
           </div>
         </div>
         <div class="footer-content-column">
-          <a class="a-tag">Lifestyle</a>
+          <a class="a-tag">შეთავაზებები</a>
           <div class="inner-a-tags offer_click">
+            <a>მიმოხილვა</a>
             <a>შეთავაზებები</a>
             <a>ღონისძიებები</a>
           </div>
@@ -266,8 +268,9 @@
         <div class="footer-content-column">
           <a class="a-tag">კონცეპტის სივრცე</a>
           <div class="inner-a-tags library_click">
-            <a>ბიბლიოთეკა</a>
+            <a>მიმოხილვა</a>
             <a>კაფე</a>
+            <a>ბიბლიოთეკა</a>
           </div>
         </div>
         <div class="contact_us_footer">
